tests/snapshots/compiler_error_fixtures/wrong_argument_count.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/wrong_argument_count.flx
== compile ==
failed (compile)
== diagnostics ==
error[E056]: Wrong Number Of Arguments

The `add` function takes 2 arguments, but 1 were provided.

  examples/compiler_errors/wrong_argument_count.flx:9:19
  |
4 | fn add(a: Int, b: Int) -> Int {
  | ----------------------------- `add` is defined with 2 parameters
5 |     a + b
6 | }
7 | 
8 | fn main() -> Unit {
9 |     let ignored = add(1)
  |                   ^^^^^^
  |                   ------ 1 arguments provided here, expected 2

Help:
  Add 1 missing argument(s), for example: `add(arg1, arg2)`.
== stdout ==
<not executed>
